# cookbook

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
recipe/: Cargo.toml  build.rs  cookbook.restbook
recipe/protos/: recipe.proto
recipe/src/: client.rs  format.rs  handler.rs  lib.rs  main.rs  parse.rs  rational.rs  repository.rs  server.rs
recipe/src/rational/: format.rs  parse.rs
recipe/src/repository/: memory.rs  mongodb.rs
recipe/src/test/: assertion.rs  fixture.rs
recipe/src/test/fixture/: chili.json  lasagne.json  recipes.json
spucky/: Cargo.toml  README.md
spucky/src/: lib.rs
spucky/tests/: spec_macro.rs
testrunner/: Cargo.toml
testrunner/src/: lib.rs
testrunner/tests/: mytest.rs
