[package]
name = "recipers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
lazy_static = "1.4"
uuid = {version = "1.3", features = ["v4"] }
tonic = "0.8"
prost = "0.11"
tokio = {version = "1.26", features = ["rt-multi-thread", "macros" ]}

[dev-dependencies]
spucky = {path = "../spucky" }

[build-dependencies]
tonic-build = "0.8"
