[package]
name = "recipers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
uuid = {version = "1.3", features = ["v4", "serde"] }
axum = {version = "0.6", features = ["headers"] }
tokio = {version = "1.26", features = ["rt-multi-thread", "macros" ]}
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mongodb = "2.4"

[dev-dependencies]
spucky = {path = "../spucky" }

hyper = "0.14.25"
tower = "0.4.13"
http-body = "0.4.5"
http = "0.2.9"